--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 
         <div id="item_wrap">
             <ul class="item">
-                <li class="item1"><a href="#"><img src="item/Row1.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/Row1-1.jpg'" onmouseleave="this.src='item/Row1.jpg'">
+                <li class="item1"><a href="#"><img src="item/row1.jpg" alt="Emma Dress in Stretch Cady"
+                            onmouseover="this.src='item/row1-1.jpg'" onmouseleave="this.src='item/row1.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -170,8 +170,8 @@
             <!-- 첫번째열 아이템 -->
 
             <ul class="item">
-                <li class="item5"><a href="#"><img src="item/Row5.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/Row5-1.jpg'" onmouseleave="this.src='item/Row5.jpg'">
+                <li class="item5"><a href="#"><img src="item/row5.jpg" alt="Emma Dress in Stretch Cady"
+                            onmouseover="this.src='item/row5-1.jpg'" onmouseleave="this.src='item/row5.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -375,7 +375,7 @@
                     </dl>
                 </li>
                 <!-- 첫번째 아이템 -->
-                <li class="acc2"><a href="#"><img src="BAG/BAG2.jpg" onmouseenter="this.src='BAG/bag2-1.jpg'"
+                <li class="acc2"><a href="#"><img src="BAG/bag2.jpg" onmouseenter="this.src='BAG/bag2-1.jpg'"
                             onmouseleave="this.src='BAG/bag2.jpg'">
                     </a>
                     <dl>
@@ -425,7 +425,7 @@
                     </dl>
                 </li>
                 <!-- 세번째 아이템 -->
-                <li class="acc4"><a href="#"><img src="BAG/BAG4.jpg" onmouseenter="this.src='BAG/bag4-1.jpg'"
+                <li class="acc4"><a href="#"><img src="BAG/bag4.jpg" onmouseenter="this.src='BAG/bag4-1.jpg'"
                             onmouseleave="this.src='BAG/bag4.jpg'">
                     </a>
                     <dl>
@@ -505,7 +505,7 @@
 
     <div id="mobile_wrap">
         <section id="asd">
-            <img src="mobile/mobileMain.jpg" alt="mobile banner">
+            <img src="mobile/mobilesize.jpg" alt="mobile banner">
         </section>
     </div>
 </body>
