--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
         <div id="item_wrap">
             <ul class="item">
                 <li class="item1"><a href="#"><img src="item/row1.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row1-1.jpg'" onmouseleave="this.src='item/row1.jpg'">
+                            onmouseover="this.src='item/row1_1.jpg'" onmouseleave="this.src='item/row1.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -104,7 +104,7 @@
                     </dl>
                 </li>
                 <li class="item2"><a href=" #"><img src="item/row2.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row2-1.jpg'" onmouseleave="this.src='item/Row2.jpg'">
+                            onmouseover="this.src='item/row2-1.jpg'" onmouseleave="this.src='item/row2.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -146,7 +146,7 @@
                     </dl>
                 </li>
                 <li class="item4"><a href="#"><img src="item/row4.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row4-1.jpg'" onmouseleave="this.src='item/Row4.jpg'">
+                            onmouseover="this.src='item/row4-1.jpg'" onmouseleave="this.src='item/row4.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -191,7 +191,7 @@
                     </dl>
                 </li>
                 <li class="item6"><a href=" #"><img src="item/row6.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row6-1.jpg'" onmouseleave="this.src='item/Row6.jpg'">
+                            onmouseover="this.src='item/row6-1.jpg'" onmouseleave="this.src='item/row6.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -231,7 +231,7 @@
                     </dl>
                 </li>
                 <li class="item8"><a href="#"><img src="item/row8.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row8-1.jpg'" onmouseleave="this.src='item/Row8.jpg'">
+                            onmouseover="this.src='item/row8-1.jpg'" onmouseleave="this.src='item/row8.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -255,8 +255,8 @@
             <!-- 두번째열 아이템 -->
 
             <ul class="item">
-                <li class="item9"><a href="#"><img src="item/Row9.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/Row9-1.jpg'" onmouseleave="this.src='item/Row9.jpg'">
+                <li class="item9"><a href="#"><img src="item/row9.jpg" alt="Emma Dress in Stretch Cady"
+                            onmouseover="this.src='item/row9-1.jpg'" onmouseleave="this.src='item/row9.jpg'">
                         <dl>
                             <dt class="clearfix">
                                 <div class="color_box"></div>
@@ -275,7 +275,7 @@
                         </dl>
                 </li>
                 <li class="item10"><a href=" #"><img src="item/row10.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row10-1.jpg'" onmouseleave="this.src='item/Row10.jpg'">
+                            onmouseover="this.src='item/row10-1.jpg'" onmouseleave="this.src='item/row10.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -317,7 +317,7 @@
                     </dl>
                 </li>
                 <li class="item12"><a href="#"><img src="item/row12.jpg" alt="Emma Dress in Stretch Cady"
-                            onmouseover="this.src='item/row12-1.jpg'" onmouseleave="this.src='item/Row12.jpg'">
+                            onmouseover="this.src='item/row12-1.jpg'" onmouseleave="this.src='item/row12.jpg'">
                     </a>
                     <dl>
                         <dt class="clearfix">
@@ -505,7 +505,7 @@
 
     <div id="mobile_wrap">
         <section id="asd">
-            <img src="mobile/910.jpg" alt="mobile banner">
+            <img src="mobile/915.jpg" alt="mobile banner">
         </section>
     </div>
 </body>
