--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
 
     <div id="mobile_wrap">
         <section id="asd">
-            <img src="mobile/915.jpg" alt="mobile banner">
+            <img src="mobile/bannerprev.jpg" alt="mobile banner">
         </section>
     </div>
 </body>
